[package]
name = "lumina-consensus"
version = "0.1.0"
edition = "2021"

[features]
default = []
malachite = []

[dependencies]
lumina-types = { path = "../lumina-types" }
lumina-execution = { path = "../lumina-execution" }
lumina-storage = { path = "../lumina-storage" }
lumina-network = { path = "../lumina-network" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
