[package]
name = "lumina-node"
version = "0.1.0"
edition = "2021"

[dependencies]
lumina-types = { path = "../lumina-types" }
lumina-execution = { path = "../lumina-execution" }
lumina-crypto = { path = "../lumina-crypto" }
lumina-storage = { path = "../lumina-storage" }
lumina-consensus = { path = "../lumina-consensus" }
lumina-network = { path = "../lumina-network" }
lumina-api = { path = "../lumina-api" }
lumina-genesis = { path = "../lumina-genesis" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
